Extract basic css external file to avoid clashed with custom css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="grande.js: a way for you to express yourself">
 
+    <link href="css/basic.css" rel="stylesheet">
     <link href="css/menu.css" rel="stylesheet">
     <link href="css/editor.css" rel="stylesheet">
   </head>
